--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "matilda",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://alshakero.github.io/matilda",
   "devDependencies": {
     "react-scripts": "0.8.4"
   },
   "dependencies": {
+    "jquery": "^3.1.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   },
@@ -13,6 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build&&gh-pages -d build"
   }
 }
